# Substratum

./: Assets.h  Block.cpp  Block.h  BlockType.cpp  CMakeLists.txt  Map.cpp  Map.h  Notes  Player.cpp  Player.h  README.md  grid.cpp  grid.h  main.cpp
src/: main.cpp
src/blocks/: Block.cpp  Block.h
src/defines/: Assets.h  Defines.h
src/entities/: Entity.h
src/entities/item/: ItemEntity.h
src/entities/player/: Player.cpp  Player.h
src/inventory/: Inventory.cpp  Inventory.h
src/managers/: AssetManager.cpp  AssetManager.h
src/player/: Player.cpp  Player.h
src/rendering/: Render.cpp  Render.h
src/world/: Map.cpp  Map.h  NoiseGen.cpp  NoiseGen.hpp
